--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,13 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
-</ion-content>
+<section id="container">
+  <ion-app
+    ><ion-content [fullscreen]="false" class="ion-padding" scroll-y="false">
+      <swiper [keyboard]="true" [zoom]="true">
+        <ng-template swiperSlide class="slide"
+          ><app-apresentation></app-apresentation
+        ></ng-template>
+        <ng-template swiperSlide><app-register></app-register></ng-template>
+        <ng-template swiperSlide>Slide 3</ng-template>
+      </swiper>
+    </ion-content>
+  </ion-app>
+</section>
