--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,32 @@
+@import "~swiper/scss";
+@import "~@ionic/angular/css/ionic-swiper";
+
+:root {
+  --ion-safe-area-top: 20px;
+  --ion-safe-area-bottom: 22px;
+}
+
 #container {
-  text-align: center;
+  height: 100%;
+  display: flex;
+  box-sizing: border-box;
 
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
-}
+  ion-app {
+    background-color: red;
+    ion-content {
+      height: 100%;
+      justify-content: flex-end;
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
-}
+      &::part(background) {
+        background-color: rgb(26, 80, 26);
+      }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
+      &::part(scroll) {
+        height: 100%;
+        display: flex;
+        align-items: center;
+        align-content: center;
+      }
+    }
+  }
 }
